--- a/trunk/Obi/Obi/Dialogs/AdvancePreferencesSettings.resx
+++ b/trunk/Obi/Obi/Dialogs/AdvancePreferencesSettings.resx
@@ -146,7 +146,7 @@
   <data name="&gt;&gt;m_CheckBoxListView.ZOrder" xml:space="preserve">
     <value>3</value>
   </data>
-  <data name="m_btnOk.AccessibleDescription" xml:space="preserve">
+  <data name="m_btnOk.AccessibleName" xml:space="preserve">
     <value>Press OK to confirm changes</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
@@ -180,7 +180,7 @@
   <data name="&gt;&gt;m_btnOk.ZOrder" xml:space="preserve">
     <value>2</value>
   </data>
-  <data name="m_btnCancel.AccessibleDescription" xml:space="preserve">
+  <data name="m_btnCancel.AccessibleName" xml:space="preserve">
     <value>Press Cancel to go back to main preferences menu</value>
   </data>
   <data name="m_btnCancel.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
